; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_ep0_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_ep0_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsg_dev = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@ESHUTDOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"error in submission: %s --> %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fsg_dev*)* @ep0_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ep0_queue(%struct.fsg_dev* %0) #0 {
  %2 = alloca %struct.fsg_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.fsg_dev* %0, %struct.fsg_dev** %2, align 8
  %4 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %5 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %8 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @GFP_ATOMIC, align 4
  %11 = call i32 @usb_ep_queue(%struct.TYPE_2__* %6, i32 %9, i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %28

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @ESHUTDOWN, align 4
  %17 = sub nsw i32 0, %16
  %18 = icmp ne i32 %15, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %14
  %20 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %21 = load %struct.fsg_dev*, %struct.fsg_dev** %2, align 8
  %22 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @WARNING(%struct.fsg_dev* %20, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %19, %14, %1
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @usb_ep_queue(%struct.TYPE_2__*, i32, i32) #1

declare dso_local i32 @WARNING(%struct.fsg_dev*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
